feat: Update .gitignore and tmux configuration
- Add configstore, *.zwc, uv-receipt.json, and karabiner backups to .gitignore
- Remove tracked configstore file
- Customize tmux keybindings in .tmux.conf.local

--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,14 @@ Ryujinx/
 zsh/.zsh_history
 zsh/.zsh_sessions
 zsh/.zcompdump*
+
+# General
+configstore/
+*.zwc
+uv/uv-receipt.json
+
+# Karabiner
+karabiner/automatic_backups/
+
+# Zsh
+zsh/.oh-my-zsh/cache/
